--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
                                         <li class="menu-item">
                                             <div class="menu-header">
                                                 <p class="bk_pra" style="font-size: 14px;">Para cooperar en la lucha contra el cáncer de piel, La Roche-Posay lanzó la campaña <span style="color: #249eda; font-weight: bold;"> #SALVATUPIEL</span>, que este año cuenta con un formato 100% digital, en sintonía con el contexto de COVID-19. Durante noviembre y diciembre se ofrecen consultas gratuitas, en modalidad online, para que todos puedan acceder de manera gratuita a un dermatólogo que les explique cómo protegerse del sol, cómo elegir un protector adecuado, cuáles son los factores de riesgo del cáncer de piel y cómo hacer el auto chequeo de lunares con el método ABCDE. <br><br>
-                                                   <span style="font-weight: bold;"> La teleconsulta no reemplaza la visita física al dermatólogo para un chequeo de lunares</span>, pero es muy importante para brindar conocimiento y las herramientas necesarias para prevenir el cáncer de piel. El año pasado se lograron <span class="text-italic">4953</span>  chequeos y se detectaron <span class="text-italic">320</span> lesiones sospechosas. Esta vez, la marca cuenta con más de <span class="text-italic">500</span> profesionales que se suman a la causa, para que todos tengan acceso al beneficio.</p>
+                                                   <span style="font-weight: bold;"> La teleconsulta no reemplaza la visita física al dermatólogo para un chequeo de lunares</span>, pero es muy importante para brindar conocimiento y las herramientas necesarias para prevenir el cáncer de piel. El año pasado se lograron <span class="text-italic">4953</span>  chequeos y se detectaron <span class="text-italic">320</span> lesiones sospechosas. Esta vez, la marca cuenta con más de <span class="text-italic">500</span> profesionales que se suman a la causa, llegando a ofrecer más de 5600 turnos gratuitos. </p>
                                             </div>
                                     
                                         </li>
@@ -466,6 +466,24 @@
                 </div>
             </div>
             <!-- End Food Menu Area -->
+
+            <!-- Start Call To Action -->
+            <div class="brook-call-to-action bg_color--1 ptb--80 ptb-md--80 ptb-sm--60">
+                <div class="container">
+                    <div class="row align-items-center">
+                        <div class="col-lg-12 col-12">
+                            <div class="call-content vertical-call-toaction text-center">
+                                <h3 class="heading heading-h3 text-black wow move-up">Reservá tu turno con uno de nuestros dermatólogos</h3>
+                                <div class="spacing"></div>
+                                <div class="call-btn text-center wow move-up">
+                                    <a class="brook-btn bk-btn-white text-white btn-sd-size btn-rounded" href="http://cloud.mail.dermabeauty.com.ar/Reserv_Turn" style="background-color: #249eda;" target="_blank"> Reservar</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- End Call To Action -->
 
 
            
