--- a/index.html
+++ b/index.html
@@ -213,9 +213,23 @@
             </div>
             <!-- End Row Columns Area -->
 
+             <!-- Start Divider Area -->
+             <div class="brook-dividers-area bg_color--1">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="dividers-inner">
+                                <div class="basic-thine-line"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- End Divider Area -->
+
             <!-- About Coronavirus Area Start -->
-            <div class="about-coronvirus-area bg_color--1 pt--90 pt_md--70 pt_sm--60 pb--80 pb_md--40 pb_sm--50" >
-                <div class="container-fluid plr--220 plr_lp--15 plr_lg--15 plr_md--15 plr_sm--15" >
+            <div class="about-coronvirus-area bg_color--1 pt--90 pt_md--70 pt_sm--60 pb--80 pb_md--40 pb_sm--50" style="padding-left: 15px;">
+                <div class="container-fluid plr--220 plr_lp--20 plr_lg--20 plr_md--15 plr_sm--15" >
                     <div class="row align-items-center">
                         <div class="col-xl-5 col-lg-6 wow move-up animate">
                             <div class="about-coronavirus-content">
@@ -233,6 +247,20 @@
                 </div>
             </div>
             <!-- About Coronavirus Area Start -->
+
+            <!-- Start Divider Area -->
+            <div class="brook-dividers-area bg_color--1">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="dividers-inner">
+                                <div class="basic-thine-line"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- End Divider Area -->
             
 
              
@@ -440,7 +468,7 @@
             <!-- Start Food Menu Area -->
             <div class="food-menu-area">
                 <div class="container">
-                    <div class="row no-gutters left-bg-image" style="background-image: url(/imagenes/767x523:01.jpg);">
+                    <div class="row no-gutters left-bg-image" style="background-image: url(/imagenes/767x523:02.jpg);">
                         <div class="col-lg-6">
                         </div>
                         <div class="col-lg-6" style="padding-left: 50px;">
@@ -467,16 +495,18 @@
             </div>
             <!-- End Food Menu Area -->
 
+            <br><br>
+
             <!-- Start Call To Action -->
-            <div class="brook-call-to-action bg_color--1 ptb--80 ptb-md--80 ptb-sm--60">
+            <div class="brook-call-to-action bg_color--1 ptb--40 ptb-md--80 ptb-sm--60" style="background-color: #249eda;">
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-lg-12 col-12">
                             <div class="call-content vertical-call-toaction text-center">
-                                <h3 class="heading heading-h3 text-black wow move-up">Reservá tu turno con uno de nuestros dermatólogos</h3>
+                                <h3 class="heading heading-h3 text-black wow move-up">Hacé tu consulta gratuita</h3>
                                 <div class="spacing"></div>
                                 <div class="call-btn text-center wow move-up">
-                                    <a class="brook-btn bk-btn-white text-white btn-sd-size btn-rounded" href="http://cloud.mail.dermabeauty.com.ar/Reserv_Turn" style="background-color: #249eda;" target="_blank"> Reservar</a>
+                                    <a class="brook-btn bk-btn-white text-black btn-sd-size btn-rounded" href="http://cloud.mail.dermabeauty.com.ar/Reserv_Turn" style="background-color: white;" target="_blank"> Reservar</a>
                                 </div>
                             </div>
                         </div>
